--- a/index.html
+++ b/index.html
@@ -11,55 +11,58 @@
 </head>
 <body>
   <header class="header position-sticky top-0">
-    <nav>
-    <div class="container text-center">
-      <div class="row">
-        <div class="col">
-          <a class="navbar-brand" href="#">
-            <img class="logo" src="./assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
-          </a>
-        </div>
-        <div class="col">
-          <ul class="nav nav-pills nav-fill">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/medicamentos.html">Comprar receta</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/tienda.html">Tienda</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/noticias.html">Noticias</a>
-            </li><li class="nav-item">
-              <a class="nav-link" href="./pages/contacto.html">Contacto</a>
-            </li>
-          </ul>
-        </div>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="./assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <span class="navbar-text">
+          <div class="collapse navbar-collapse" id="navbarText">
+            <div class="col">
+              <ul class="nav nav-pills nav-fill">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./pages/medicamentos.html">Comprar receta</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./pages/tienda.html">Tienda</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./pages/noticias.html">Noticias</a>
+                </li><li class="nav-item">
+                  <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </span>
       </div>
-    </div>
-  </nav>
+    </nav>
   </header>
   <main>
     <h1 class="text-center pt-2 pb-2 fs-2 fw-bold" >Bienvenidos a Farmacia Noble</h1>
-    <div class="container-fluid text-left">
-      <div class="row  pt-4">
-        <div class="col-4">
+    <div class="inicio d-flex d-inline text-left">
+      <!--<div class="row  pt-4 row">-->
+        <div class="col">
           <section class="m-3 border border-1 rounded-bottom shadow p-3">
             <h3 class="fw-bold text-decoration-underline">Nuestra historia</h3>
             <p class="fs-5">Farmacia Noble surge en agosto de 1990 como un sueño familiar.</p> 
             <p class="fs-5">Atendida desde sus orígenes por Bernardo y Bianca Noble, ambos profesionales farmacéuticos, crecimos tanto en el rubro farmacéutico como en el area de salud y belleza, ganando la confianza y el cariño de nuestros clientes, que siempre vuelven en busca de consejos y sugerencias.</p>
           </section>
         </div>
-        <div class="col-4">
+        <div class="col">
           <section class="m-3 border border-1 rounded-bottom shadow p-3" width="30%">
             <h3 class="fw-bold text-decoration-underline">Nuestra misión</h3>
             <p class="fs-5 text-left">Desde el inicio, nuestra misión es brindar un servicio de calidad orientada a nuestros clientes, con la premisa de que la satisfacción de nuestros clientes es lo primero.</p>
             <p class="fs-5 text-left">Es a ellos a quien abocamos nuestra dedicación, ofreciendo productos de calidad y asesorarando a nuestros clientes en farmacia, perfumería y dermocosmética.</p>
           </section>
         </div>
-        <div class="col-4">
+        <div class="col">
           <section class="m-3 border border-1 rounded-bottom shadow p-3" width="30%">
             <h3 class="fw-bold text-decoration-underline">Nuestro staff</h3>
             <p class="fs-5">Les presentamos a las maravillosas personas que forman parte de nuestro equipo.</p>
@@ -79,26 +82,27 @@
       </div>
       <div class="col pt-4">
         <h4 class="text-decoration-underline ms-1">Contacto</h4>
-        <p>011-5555-1234</p>
+        <p>Teléfono 011-5555-1234</p>
+        <p>Celular 011-15-999-8765</p>
         <p>contacto@farmacianoble.com.ar</p>
       </div>
       <div class="col pt-4">
         <h4 class="text-decoration-underline ms-1">Seguinos en nuestras redes sociales</h4>
-          <a href="https://www.facebook.com/" target="_blank">
-           <i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.instagram.com/" target="_blank">
-            <i class="icon fa-brands fa-instagram fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.tiktok.com/" target="_blank">
-            <i class="icon fa-brands fa-tiktok fs-3 pe-4"></i>
-          </a>
-          <a href="https://twitter.com/" target="_blank">
-            <i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.whatsapp.com/" target="_blank">
-            <i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i>
-          </a>
+        <span>
+          <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i></a>
+        </span>
+        <span>
+          <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4"></i></a>
+        </span>
+        <span>
+          <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4"></i></a>
+        </span>
+        <span>
+          <a href="https://twitter.com/" target="_blank"><i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i></a>
+        </span>
+        <span>
+          <a href="https://www.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i></a>
+        </span>     
       </div>
     </div>
     <p>Todos los derechos reservados - 2024</p>
