--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,33 +11,36 @@
 </head>
 <body>
   <header class="header position-sticky top-0">
-    <nav>
-      <div class="container text-center">
-        <div class="row">
-          <div class="col">
-            <a class="navbar-brand" href="../index.html">
-              <img class="logo" src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
-            </a>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <span class="navbar-text">
+          <div class="collapse navbar-collapse" id="navbarText">
+            <div class="col">
+              <ul class="nav nav-pills nav-fill">
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./medicamentos.html">Comprar receta</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./tienda.html">Tienda</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./noticias.html">Noticias</a>
+                </li><li class="nav-item">
+                  <a class="nav-link  active" aria-current="page" " href="./contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="col">
-            <ul class="nav nav-pills nav-fill">
-              <li class="nav-item">
-                <a class="nav-link" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./medicamentos.html">Comprar receta</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./tienda.html">Tienda</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./noticias.html">Noticias</a>
-              </li><li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+        </span>
       </div>
     </nav>
   </header>
@@ -128,7 +131,21 @@
       <div class="col pt-4">
         <h4 class="text-decoration-underline ms-1">Seguinos en nuestras redes sociales</h4>
           <a href="https://www.facebook.com/" target="_blank">
-           <i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i>
+            <span>
+              <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i></a>
+            </span>
+            <span>
+              <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4"></i></a>
+            </span>
+            <span>
+              <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4"></i></a>
+            </span>
+            <span>
+              <a href="https://twitter.com/" target="_blank"><i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i></a>
+            </span>
+            <span>
+              <a href="https://www.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i></a>
+            </span><i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i>
           </a>
           <a href="https://www.instagram.com/" target="_blank">
             <i class="icon fa-brands fa-instagram fs-3 pe-4"></i>
