--- a/pages/medicamentos.html
+++ b/pages/medicamentos.html
@@ -11,33 +11,36 @@
 </head>
 <body>
   <header class="header position-sticky top-0">
-    <nav>
-      <div class="container text-center">
-        <div class="row">
-          <div class="col">
-            <a class="navbar-brand" href="../index.html">
-              <img class="logo" src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
-            </a>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <span class="navbar-text">
+          <div class="collapse navbar-collapse" id="navbarText">
+            <div class="col">
+              <ul class="nav nav-pills nav-fill">
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./medicamentos.html">Comprar receta</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./tienda.html">Tienda</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./noticias.html">Noticias</a>
+                </li><li class="nav-item">
+                  <a class="nav-link" href="./contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="col">
-            <ul class="nav nav-pills nav-fill">
-              <li class="nav-item">
-                <a class="nav-link" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./medicamentos.html">Comprar receta</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./tienda.html">Tienda</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./noticias.html">Noticias</a>
-              </li><li class="nav-item">
-                <a class="nav-link" href="./contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+        </span>
       </div>
     </nav>
   </header>
@@ -53,11 +56,11 @@
       <li>Los pedidos realizados de 9 a 13, se envían o retiran a partir de las 14hs. 
         El envío o retiro se coordina por Whatsapp. 
         Si desea recibir el pedido en su domicilio, verifique nuestra zona de cobertura:</li>
-        <iframe class="pt-2" src="https://www.google.com/maps/d/u/0/embed?mid=1zMrpd11MKDvt1yL2sNnnGMmre0uNdcw&ehbc=2E312F" width="300" height="300"></iframe>
+        <iframe class="position-center pt-2" src="https://www.google.com/maps/d/u/0/embed?mid=1zMrpd11MKDvt1yL2sNnnGMmre0uNdcw&ehbc=2E312F" width="300" height="300"></iframe>
       <li>Para enviar tu receta hacé <a href="https://www.whatsapp.com/" target="_blank">click aquí</a></li>
     </ol>
   </div>
-  <div class="col-6 col-md-4 text-right">
+  <div class="col-6 col-md-4 text-center">
     <h5 class="cobMed text-decoration-underline" >Coberturas médicas</h5>
     <ul>
       <li class="list-group-item">Accord Salud</li>
@@ -93,21 +96,21 @@
       </div>
       <div class="col pt-4">
         <h4 class="text-decoration-underline ms-1">Seguinos en nuestras redes sociales</h4>
-          <a href="https://www.facebook.com/" target="_blank">
-           <i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.instagram.com/" target="_blank">
-            <i class="icon fa-brands fa-instagram fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.tiktok.com/" target="_blank">
-            <i class="icon fa-brands fa-tiktok fs-3 pe-4"></i>
-          </a>
-          <a href="https://twitter.com/" target="_blank">
-            <i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.whatsapp.com/" target="_blank">
-            <i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i>
-          </a>
+        <span>
+          <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i></a>
+        </span>
+        <span>
+          <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4"></i></a>
+        </span>
+        <span>
+          <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4"></i></a>
+        </span>
+        <span>
+          <a href="https://twitter.com/" target="_blank"><i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i></a>
+        </span>
+        <span>
+          <a href="https://www.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i></a>
+        </span>
       </div>
     </div>
     <p>Todos los derechos reservados - 2024</p>
