--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -11,56 +11,59 @@
 </head>
 <body>
   <header class="header position-sticky top-0">
-    <nav>
-      <div class="container text-center">
-        <div class="row">
-          <div class="col">
-            <a class="navbar-brand" href="../index.html">
-              <img class="logo" src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
-            </a>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <span class="navbar-text">
+          <div class="collapse navbar-collapse" id="navbarText">
+            <div class="col">
+              <ul class="nav nav-pills nav-fill">
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./medicamentos.html">Comprar receta</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link href="./tienda.html">Tienda</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./noticias.html">Noticias</a>
+                </li><li class="nav-item">
+                  <a class="nav-link" href="./contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="col">
-            <ul class="nav nav-pills nav-fill">
-              <li class="nav-item">
-                <a class="nav-link" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./medicamentos.html">Comprar receta</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./tienda.html">Tienda</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./noticias.html">Noticias</a>
-              </li><li class="nav-item">
-                <a class="nav-link" href="./contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+        </span>
       </div>
     </nav>
   </header>
   <main>
     <h1 class="text-center pt-2 pb-2 fs-2 fw-bold">Noticias</h1>
-    <div class="noticias d-inline-flex justify-content-between align-items-center">
+    <div class="d-flex d-inline">
       <div class="p-2">
-        <div class="card-body m-3 border border-1 rounded-bottom shadow p-3 justify-content-cente">
+        <div class="card-body m-3 border border-dark border-2 rounded-bottom shadow p-3">
           <h5 class="card-title fw-bold pt-2 pb-2">Te mostramos cómo elegir la fragancia adecuada para vos</h5>
           <iframe width="350" height="300" src="https://www.youtube.com/embed/e-SXF_Cc5Cs?si=DMUCQBKkhrgUjUwG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
       </div>
       <div class="p-2">
-        <div class="card-body m-3 border border-1 rounded-bottom shadow p-3 justify-content-center">
+        <div class="card-body m-3 border border-dark border-2 rounded-bottom shadow p-3">
           <h5 class="card-title fw-bold pt-2 pb-2">Medicamentos sin TACC</h5> 
-          <img src="../assets/img/Noticias/medicamentos_sin_tacc.jpeg" width="350" height="300" alt="Imagen medicamentos con el símbolo Sin TACC">
+          <img width="350" height="280" src="../assets/img/Noticias/medicamentos_sin_tacc.jpeg" alt="Imagen medicamentos con el símbolo Sin TACC">
           <p class="pt-3"><a href="https://www.colfacor.org.ar/images/capacitacion/alimentos_libres_gluten/ACAmedicamentos_listado.pdf"  target="_blank">Leer más...</a></p> 
         </div>
       </div>
-      <div class="p-2">
-        <div class="card-body m-3 border border-1 rounded-bottom shadow p-3 justify-content-center" >
+      <div class="p2">
+        <div class="card-body m-3 border border-dark border-2 rounded-bottom shadow p-3" >
           <h5 class="card-title fw-bold pt-2 pb-2">¿Qué diferencias hay entre un protector y un bloqueador solar?</h5>
-          <img width="350" height="300" src="../assets/img/Noticias/bloqueadorVsProtector.png" alt="Imagen explicativa de las diferencias entre un bloqueador solar y un protector solar">
+          <img width="300" height="250" src="../assets/img/Noticias/bloqueadorVsProtector.png" alt="Imagen explicativa de las diferencias entre un bloqueador solar y un protector solar">
           <p class="pt-3"><a href="https://www.clarin.com/internacional/cuidado-piel-verano-diferencias-protector-bloqueador-solar_0_Ksyf9U9NlA.html" target="_blanck">Leer más...</a></p>            
         </div>
       </div>      
@@ -80,21 +83,21 @@
       </div>
       <div class="col pt-4">
         <h4 class="text-decoration-underline ms-1">Seguinos en nuestras redes sociales</h4>
-          <a href="https://www.facebook.com/" target="_blank">
-           <i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.instagram.com/" target="_blank">
-            <i class="icon fa-brands fa-instagram fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.tiktok.com/" target="_blank">
-            <i class="icon fa-brands fa-tiktok fs-3 pe-4"></i>
-          </a>
-          <a href="https://twitter.com/" target="_blank">
-            <i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.whatsapp.com/" target="_blank">
-            <i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i>
-          </a>
+        <span>
+          <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i></a>
+        </span>
+        <span>
+          <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4"></i></a>
+        </span>
+        <span>
+          <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4"></i></a>
+        </span>
+        <span>
+          <a href="https://twitter.com/" target="_blank"><i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i></a>
+        </span>
+        <span>
+          <a href="https://www.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i></a>
+        </span>
       </div>
     </div>
     <p>Todos los derechos reservados - 2024</p>
