--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -11,33 +11,36 @@
 </head>
 <body>
   <header class="header position-sticky top-0">
-    <nav mt-2 mb-2>
-      <div class="container text-center">
-        <div class="row">
-          <div class="col">
-            <a class="navbar-brand" href="../index.html">
-              <img class="logo" src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
-            </a>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <span class="navbar-text">
+          <div class="collapse navbar-collapse" id="navbarText">
+            <div class="col">
+              <ul class="nav nav-pills nav-fill">
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./medicamentos.html">Comprar receta</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./tienda.html">Tienda</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./noticias.html">Noticias</a>
+                </li><li class="nav-item">
+                  <a class="nav-link" href="./contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="col">
-            <ul class="nav nav-pills nav-fill">
-              <li class="nav-item">
-                <a class="nav-link" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./medicamentos.html">Comprar receta</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./tienda.html">Tienda</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./noticias.html">Noticias</a>
-              </li><li class="nav-item">
-                <a class="nav-link" href="./contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+        </span>
       </div>
     </nav>
   </header>
@@ -45,7 +48,7 @@
   <main>
     <h1 class="text-center pt-2 pb-2 fs-2 fw-bold">Tienda</h1>
     <p class="fs-5 text-center p-auto" >Estas son las ofertas de esta semana. Podés acceder a nuestro catálogo completo haciendo <a href="https://www.mercadolibre.com.ar/" target="_blank">aquí</a></p>
-    <div class="row row-cols-1 row-cols-md-3 g-3">
+    <div class="row">
       <div class="col">
         <div class="card">
           <img src="../assets/img/Productos con descuento/Set_Carolina_Herrera.webp" alt="Imagen del set Girl Blush" class="card-img-top">
@@ -76,7 +79,7 @@
           </div>
         </div>
       </div>
-    <div class="row row-cols-1 row-cols-md-3 g-3">
+    <div class="row">
       <div class="col">
         <div class="card">
           <img src="../assets/img/Productos con descuento/Ga-ma_Cepillo_Alisador.webp" alt="Imagen del Cepillo Alisador Ga-ma" class="card-img-top">
@@ -108,7 +111,7 @@
         </div>
       </div>
     </div>
-    <div class="row row-cols-1 row-cols-md-3 g-3">
+    <div class="row">
     <div class="col">
       <div class="card">
         <img src="../assets/img/Productos con descuento/Combo_Dermaglos_Solar.webp" alt="Imagen de los productos del combo Dermaglós" class="card-img-top">
@@ -156,21 +159,21 @@
       </div>
       <div class="col pt-4">
         <h4 class="text-decoration-underline ms-1">Seguinos en nuestras redes sociales</h4>
-          <a href="https://www.facebook.com/" target="_blank">
-           <i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.instagram.com/" target="_blank">
-            <i class="icon fa-brands fa-instagram fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.tiktok.com/" target="_blank">
-            <i class="icon fa-brands fa-tiktok fs-3 pe-4"></i>
-          </a>
-          <a href="https://twitter.com/" target="_blank">
-            <i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i>
-          </a>
-          <a href="https://www.whatsapp.com/" target="_blank">
-            <i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i>
-          </a>
+        <span>
+          <a href="https://www.facebook.com/" target="_blank"><i class="icon fa-brands fa-facebook-f fs-3 pe-4"></i></a>
+        </span>
+        <span>
+          <a href="https://www.instagram.com/" target="_blank"><i class="icon fa-brands fa-instagram fs-3 pe-4"></i></a>
+        </span>
+        <span>
+          <a href="https://www.tiktok.com/" target="_blank"><i class="icon fa-brands fa-tiktok fs-3 pe-4"></i></a>
+        </span>
+        <span>
+          <a href="https://twitter.com/" target="_blank"><i class="icon fa-brands fa-x-twitter fs-3 pe-4"></i></a>
+        </span>
+        <span>
+          <a href="https://www.whatsapp.com/" target="_blank"><i class="icon fa-brands fa-whatsapp fs-3 pe-4"></i></a>
+        </span>
       </div>
     </div>
     <p>Todos los derechos reservados - 2024</p>
